--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
             // Load GeoJSON based on dropdown selection
             function loadGeoJSON(url) {
                 console.log(url);
-
                 if (window.location.hostname.includes("github")) {
-                    url = "https://github.com/rin2401/gis/raw/master/" + url;
+                    url = "https://media.githubusercontent.com/media/rin2401/gis/master/" + url;
                 }
 
                 geojson = null;
